--- a/galeria-fotos-dinamica/css/style.css
+++ b/galeria-fotos-dinamica/css/style.css
@@ -1,16 +1,79 @@
-html{
-  scroll-behavior: smooth;
+body{
+  font-family: 'Poppins', sans-serif;
 }
-
+.navbar{
+  background-color: #011b47;
+}
+.img-fluid{
+  width: 10rem; 
+  height: 2rem;
+}
+html{
+scroll-behavior: smooth;
+}
+.icone-scroll {
+  /*position: absolute;*/
+  /*bottom: 8em;*/
+  width: 50px;
+  height: 50px;
+  /*left: 50%;*/
+  /*margin-left: -25px;*/
+  cursor: pointer;
+}
+.scroll {
+  width: 15px;
+  height: 15px;
+  border-right: 2px solid #011b47;
+  border-bottom: 2px solid #011b47;
+  display: inline-block;
+  position: relative;
+}
+.scroll-next {
+  transform: rotate(45deg);
+  margin: 0 0 0 16.5px;
+}
+.scroll-next + .scroll-next {
+  top: -15px;
+  margin-top: 0;
+}
+.btnEnviarFoto{
+  padding: 12px 20px; 
+  border-radius: 5px;
+  margin: 10px; 
+  text-transform: uppercase; 
+  background-color: #011b47; 
+  border: solid 2px #011b47; 
+  color: #fff; 
+  font-weight: 800;
+}
+.titleGaleria{
+  font-size: 18px; 
+  font-weight: 600; 
+  line-height: 24px;
+  color: white;
+}
+.subTitleGaleria{
+    font-size: 36px; 
+    line-height: 44px; 
+    font-weight: 500; 
+    text-transform: uppercase;
+}
 .modal {
   text-align: center
   
+}
+.titleportifolio{
+  display: initial;
+}
+.gallery{
+  display: none;
 }
 .modal-dialog {
   display: inline-block;
   text-align: left;
   vertical-align: middle;
 }
+
 
 .scroll-icon {
   display: flex;
@@ -19,12 +82,14 @@ html{
   height: 2em;
   width: 1.2em;
   font-size: 22px;
+  color: rgba(#fff, .5);
   border-radius: 2em;
   border: solid 2px;
   transition: .4s;
 }
 
 .scroll-icon:hover {
+  background-color: rgba(#fff, .05);
   color: #fff;
 }
 
@@ -39,149 +104,156 @@ html{
 
 @keyframes scroll-icon {
     0% { transform: translateY(-12px); opacity: 0; }
-     30%, 70% { opacity: 1; }
-      100% { transform: translateY(12px); opacity: 0; }
+   30%, 70% { opacity: 1; }
+  100% { transform: translateY(12px); opacity: 0; }
 }
 
+
+
+
 #titleportifolio {
-  padding-top: 80px;
-  margin-bottom: 30px;
-  max-width: 750px;
-  padding: 20px;
-  text-align: center
+padding-top: 80px;
+margin-bottom: 30px;
+max-width: 750px;
+padding: 20px;
+
+text-align: center
 }
 
 .modal-backdrop {
-  z-index: 0;
-  width: auto;
+z-index: 0;
+width: auto;
 }
-.fade {
-  opacity: 0.5;
+
+.fade
+{
+
+opacity: 0.5;
 }
-.fade:hover {
-  opacity:1;
+.fade:hover
+{
+opacity:1;
 }
 
 .image-fade-in-out-container {
-  position: relative;
+position: relative;
 }
 
 .image-fade-in-out {
-  opacity: 0.3;
-  transition: opacity 1s ease-in-out;
+opacity: 0.3;
+transition: opacity 1s ease-in-out;
+
 }
 
 .image-fade-in-out:hover {
-  opacity: 2.0;
-  transition: opacity .55s ease-in-out;
-  border-bottom: solid 7px #eb9d37;
+opacity: 2.0;
+transition: opacity .55s ease-in-out;
+border-bottom: solid 7px #eb9d37;
+
 }
 
 h3 { 
-  text-align: center;
-  font-family: 'Poppins', sans-serif;
-  color: white;
-  font-size: 48px;
-  line-height: 60px;
-  font-weight: 900;
-  text-transform: capitalize;
+text-align: center;
+font-family: 'Poppins', sans-serif;
+color: white;
+font-size: 48px;
+line-height: 60px;
+font-weight: 1000;
+text-transform: capitalize;
 }
 
 .image-fade-in-out-mask {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+position: absolute;
+width: 100%;
+height: 100%;
+background-color: rgba(0, 0, 0, 0.8);
+display: flex;
+justify-content: center;
+align-items: center;
 }
 .imagem3{
-  transition: all 0.5s;
-  cursor: pointer;
+transition: all 0.5s;
+cursor: pointer;
 }
 
 .imagem3:hover{
-  -webkit-transform: scale(1.5);
-  transform: scale(1.5);
+-webkit-transform: scale(1.5);
+transform: scale(1.5);
 }
 
 
 
 #headmom {
-  background-image: url(../imagens/mom2.jpg);
-  width: auto;
-  text-align: center;
-  height: 1000px;
-  background-size: cover;
-  background-attachment: fixed, scroll;
-  max-width: 100%
+background-image: url(../imagens/mom2.jpg);
+width: auto;
+text-align: center;
+height: 1000px;
+background-size: cover;
+background-attachment: fixed, scroll;
+max-width: 100%
 
 
 }
 #phead{
-  font-family: 'Poppins', sans-serif;
-  font-size: 18px;
-  line-height: 28px;
-  color: #fff; padding: 5px;
-  max-width: 900px;
-  margin: 15px auto;
-  text-align: center;
-  width: 800;
-  font-weight: 700
+  font-family: 'Poppins', sans-serif; font-size: 18px; line-height: 28px; color: #fff; padding: 5px; max-width: 900px; margin: 15px auto; text-align: center; width: 800; font-weight: 700
 }
 
 
 #containerUm {
-  padding-top: 30px;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
-  position: relative;
-  max-width: 1140px;
-  border-radius: 20px;
-  opacity: 0.9;
-}
+padding-top: 30px;
+padding-right: 15px;
+padding-left: 15px;
+margin-right: auto;
+margin-left: auto;
+position: relative;
+max-width: 1140px;
+border-radius: 20px;
+opacity: 0.9;
 
+}
 #headhead {
   margin: 150px auto; margin-top: 200px
 }
 
 .colorprimary {
-  color: #eb9d37
+color: #eb9d37
 }
 
 #color2 {
-  color: white;
+color: white;
 }
 
 div .backprimary {
-  background-color: #eb9d37;
+background-color: #eb9d37;
 }
 
 div .containerprimary {
-  background-color: #eb9d37
+background-color: #eb9d37
 }
 
 .colorblack {
-  background-color: #0f0f15;
+background-color: #0f0f15;
+
+
 }
 
 #portifolio {
-  width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-left: auto;
-  margin-left: auto;
-  height: 100%;
+width: 100%;
+padding-right: 15px;
+padding-left: 15px;
+margin-left: auto;
+margin-left: auto;
+
+height: 100%;
+
 }
+
 
 @media screen and (max-width: 500px) {
  
   #headhead {
     margin: 10px auto; margin-top: 10px
-  }
+  };
 
   h3 { 
     text-align: center;
@@ -191,15 +263,18 @@ div .containerprimary {
     
     font-weight: 700;
     text-transform: capitalize;
-    }
+    };
 
-  #headmom {
-    background-image: url(../imagens/mom2.jpg);
-    width: 100px;
-    height: 800px;
-    background-size: cover;
-    background-attachment: fixed, scroll;
+    #headmom {
+      background-image: url(../imagens/mom2.jpg);
+      width: 100px;
+      height: 800pxpx;
+      background-size: cover;
+      background-attachment: fixed, scroll;
+      
+      
       }
-  }
+
+  };
 
 
